<resources>
    <string name="app_name">AppointmentScheduler</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="createAccount">Create Account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signIn">Please Sign In</string>
    <string name="resetPassword">Reset Password</string>
</resources>
